# chainlink-polkadot

./: .editorconfig  .gitignore  Cargo.toml  IDEAS  LICENSE  Makefile  README.md  rust-toolchain  rustfmt.toml
.github/workflows/: clippy.yml  test.yml
docs/: ARCHITECTURE.md
fm-demo/: README.md  chainlink.env  checkAnswer.js  checkStatus.js  docker-compose.yml  external_initiator.env  feed.json  feedSetup.js  feeds.json  operatorSetup.js  package.json
fm-demo/go-scripts/: .gitignore  README.md  go.mod  go.sum  main.go
fm-demo/go-scripts/.github/workflows/: lint.yaml  test.yaml
fm-demo/go-scripts/client/: blockchain.go  blockchain_test.go  chainlink.go  chainlink_models.go  chainlink_test.go  client_suite_test.go  ethereum.go  ethereum_test.go
fm-demo/go-scripts/config/: config.go  config.yml  ocr_config.json
fm-demo/go-scripts/contracts/: contract_interfaces.go  contract_models.go  contract_suite_test.go  contracts_test.go  ethereum_contracts.go
fm-demo/go-scripts/contracts/ethereum/: FluxAggregator.go  LinkToken.go  OffchainAggregator.go  VRF.go
fm-demo/go-scripts/contracts/ethereum/v0.4/abi/: BasicToken.abi  ERC20Basic.abi  ERC677.abi  ERC677Receiver.abi  ERC677Token.abi  LinkToken.abi  StandardToken.abi
fm-demo/go-scripts/contracts/ethereum/v0.6/abi/: AggregatorInterface.abi  AggregatorV2V3Interface.abi  AggregatorValidatorInterface.abi  FluxAggregator.abi  LinkTokenInterface.abi  Owned.abi  VRF.abi
fm-demo/go-scripts/contracts/ethereum/v0.7/abi/: AccessControllerInterface.abi  OffchainAggregator.abi  OffchainAggregatorBilling.abi  Owned.abi  TypeAndVersionInterface.abi
fm-demo/go-scripts/contracts/ethereum/v0.7/src/: AggregatorV3Interface.sol  LinkTokenInterface.sol  OffchainAggregator.sol  OffchainAggregatorBilling.sol  Owned.sol
fm-demo/go-scripts/specs/: spec.json
fm-demo/go-scripts/tools/: README.md  compile_contracts.py
fm-demo/scripts/: add-bridges.sh  add-jobspecs.sh  common.sh  create-feed.sh  ei-config.sh  run-all.sh  run-chain.sh  run-chainlink.sh  run-ei.sh
fm-demo/specs/: spec.json  spec2.json
fm-demo/tmp/: cookiefile
pallet-chainlink/: Cargo.toml  README.md
pallet-chainlink-feed/: Cargo.toml  README.md  types.json
pallet-chainlink-feed/src/: benchmarking.rs  default_weights.rs  feed.rs  lib.rs  mock.rs  tests.rs  traits.rs  utils.rs
pallet-chainlink/src/: lib.rs  mock.rs  tests.rs
pallet-template/: Cargo.toml
pallet-template/src/: lib.rs
runlog-demo/: README.md  package-lock.json  package.json
runlog-demo/internal-scripts/: add-bridge.sh  add-ei.sh  add-jobspec.sh  common.sh
substrate-chainlink/: .gitignore  README.md  chainlink.env  docker-compose.yml  operatorSetup.js  package-lock.json  package.json  setup
substrate-chainlink/internal-scripts/: add-bridge.sh  add-ei.sh  add-jobspec.sh  common.sh
substrate-node-example/: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  types.json
substrate-node-example/.devcontainer/: devcontainer.json
substrate-node-example/doc/: rust-setup.md
substrate-node-example/front-end/: package.json
substrate-node-example/front-end/src/: App.js  ChainlinkExample.js  TemplateModule.js
substrate-node-example/front-end/src/config/: common.json  development.json  types.json
substrate-node-example/front-end/src/substrate-lib/components/: TxButton.js
substrate-node-example/mock-operator/: README.md  index.js  package.json
substrate-node-example/node/: Cargo.toml
substrate-node-example/node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
substrate-node-example/pallets/chainlink-example-pallet/: Cargo.toml
substrate-node-example/pallets/chainlink-example-pallet/src/: lib.rs
substrate-node-example/pallets/example-pallet/: Cargo.toml
substrate-node-example/pallets/example-pallet/src/: lib.rs
substrate-node-example/pallets/template/: Cargo.toml
substrate-node-example/pallets/template/src/: lib.rs  mock.rs
substrate-node-example/runtime/: Cargo.toml
substrate-node-example/runtime/src/: example.rs  lib.rs  lib2.rs
substrate-node-example/runtime/src/weights/: mod.rs  pallet_chainlink_feed.rs
substrate-node-example/scripts/: init.sh
substrate-node-example/specs/: README.md  chainlink-feed.json  chainlink-no-admin-funds.json  chainlink.json  feedconfig.json
substrate-node-example/src/: chain_spec.rs  main.rs  service.rs
