[package]
name = "pallet-chainlink-feed"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "chainlink price feed pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", features = ['derive'], default-features = false }
sp-arithmetic = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { version = "2.0.1", default-features = false }
# Needed for type-safe access to storage DB.
frame-support = { version = "2.0.1", default-features = false }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { version = "2.0.1", default-features = false }
frame-benchmarking = { version = "2.0.1", default-features = false, optional = true }

[dev-dependencies]
sp-std = { version = "2.0.1" }
sp-io = { version = "2.0.1" }
pallet-balances = { version = "2.0.1" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
