[package]
name = "pallet-chainlink"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.125", optional = true }
codec = { package = "parity-scale-codec", version = "3.4.0", features = ['derive'], default-features = false }
scale-info = { version = "2.3.1", features = ['derive'], default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'master', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'master', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'master', default-features = false }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'master', default-features = false }

[dev-dependencies]
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]
