[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '4.0.0'

[dependencies]
codec = { default-features = false, features = ['derive'], package = "parity-scale-codec", version = "2.0.1" }
hex-literal = { optional = true, version = "0.3.1" }
serde = { version = "1.0.125", optional = true, features = ["derive"] }

# Substrate dependencies
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-system-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

# local dependencies
pallet-template = { default-features = false, path = '../pallets/template'}

pallet-chainlink-feed = { path = '../../pallet-chainlink-feed', default-features = false }

pallet-chainlink = { path = '../../pallet-chainlink', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-template/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'pallet-chainlink-feed/runtime-benchmarks',
]
std = [
    'serde',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-io/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-chainlink-feed/std',
    'pallet-chainlink/std'
]
